* fix android's center preview bug * change preview's body overflow-y

--- a/mobile/scss/report_detail.scss
+++ b/mobile/scss/report_detail.scss
@@ -15,6 +15,7 @@ body {
 
 body {
     background-color: #e6e6e6;
+    overflow-y: auto;
 }
 
 .hide {
